--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easyaccounts",
-  "homepage": "https://github.com/usamabinnadeem-10/easyaccounts",
+  "homepage": "http://usamabinnadeem-10.github.io/easyaccounts/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
