--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
-    "@mui/x-data-grid": "^5.0.0-beta.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -26,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
     "react-spinners": "^0.11.0",
+    "react-table": "^7.7.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
