--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.0.0",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
+    "react-to-print": "^2.14.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
