--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "easyaccounts",
-  "homepage": "http://usamabinnadeem-10.github.io/easyaccounts/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,9 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
