--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "axios-auth-refresh": "^3.2.2",
     "formik": "^2.2.9",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.1",
