--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images-uploading": "^3.1.6",
     "react-jwt": "^1.1.4",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
