--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.23.0",
     "axios-auth-refresh": "^3.2.2",
     "formik": "^2.2.9",
+    "lodash.get": "^4.4.2",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -35,6 +36,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "typeface-poppins": "^1.1.13",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
