--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.2",
     "react-images-uploading": "^3.1.6",
     "react-images-viewer": "^1.7.1",
