--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "axios-auth-refresh": "^3.2.2",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "lodash.get": "^4.4.2",
     "material-ui-phone-number": "^3.0.0",
