--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.2",
+    "react-idle-timer": "^5.7.2",
     "react-images-uploading": "^3.1.6",
     "react-images-viewer": "^1.7.1",
     "react-jwt": "^1.1.4",
