--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.17.13",
+    "@tanstack/react-table": "^8.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -32,7 +33,6 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.0.0",
     "react-spinners": "^0.11.0",
-    "react-table": "^7.7.0",
     "react-to-print": "^2.14.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
